--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -24,6 +24,7 @@ jobs:
         run: npm test:ci
   build:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -42,7 +43,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: build
+    needs: [ test, build ]
     steps:
       - name: Deploy to Netlify
         uses: South-Paw/action-netlify-deploy@v1.2.0
