feat: Implementing test to CI | New step to deploy in netlify v3

--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -21,8 +21,9 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run: npm test:ci
+        run: npm run test:ci
   build:
+    name: Build
     runs-on: ubuntu-latest
     needs: test
     steps:
