feat: Implementing test to CI | New step to deploy in netlify v5

--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -47,10 +47,5 @@ jobs:
     needs: [ test, build ]
     steps:
       - name: Deploy to Netlify
-        uses: South-Paw/action-netlify-deploy@v1.2.0
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          netlify-auth-token: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          netlify-site-id: ${{ secrets.NETLIFY_SITE_ID }}
-          build-dir: '/'
-          comment-on-commit: true
+        run: |
+          curl post https://api.netlify.com/build_hooks/${{ secrets.NETLIFY_BUILD_HOOK }}
