feat: New changes to cd release v4

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,9 @@ on:
 
 jobs:
   release:
-    permissions: write-all
+    permissions:
+      contents: write
+      pull-requests: write
     name: Create Release
     runs-on: ubuntu-latest
     if: github.event.pull_request.merged == true
@@ -30,3 +32,4 @@ jobs:
             - Second Change
           draft: false
           prerelease: false
+          allowUpdates: true
