feat: New changes ti release

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,8 +27,7 @@ jobs:
           tag_name: ${{ github.run_number }}
           release_name: Release ${{ github.run_number }}
           body: |
-            Changes in this Release
-            - First Change
-            - Second Change
+            ${{ github.event.pull_request.title }}
+            ${{ github.event.pull_request.body }}
           draft: false
           prerelease: false
