--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -1,31 +1,11 @@
-name: Homework Pipeline
-
+name: dev-build.yml
 on:
-  pull_request:
-    branches: [ main ]
+  workflow_call:
 
 jobs:
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20.10'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run tests
-        run: npm run test:ci
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: test
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -39,12 +19,12 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build:prod
+        run: npm run build:dev
 
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: [ test, build ]
+    needs: build
     steps:
       - name: Deploy to Netlify
         run: |
