--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   build:
-    name: Build
+    name: Build Dev
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -22,10 +22,10 @@ jobs:
         run: npm run build:dev
 
   deploy:
-    name: Deploy
+    name: Deploy Dev
     runs-on: ubuntu-latest
     needs: build
     steps:
       - name: Deploy to Netlify
         run: |
-          curl post https://api.netlify.com/build_hooks/${{ secrets.NETLIFY_BUILD_HOOK }}
+          curl post https://api.netlify.com/build_hooks/${{ secrets.DEV_NETLIFY_BUILD_HOOK }}
